--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
           <div class="hero-banner">
 
-            <img src="" width="800" height="864" loading="lazy" alt="Ethan's Photo"
+            <img src="./IMG_20241117_105039.jpg" width="800" height="864" loading="lazy" alt="Ethan's Photo"
               class="img-cover">
 
             <div class="elem elem-1">
