--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
 
       <a href="#">
-        <h1 class="logo">Ethan Ward</h1>
+        <h1 class="logo">Ajay kumar</h1>
       </a>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
@@ -117,7 +117,7 @@
               <ion-icon name="trophy"></ion-icon>
             </div>
 
-            <img src="F:\my phone\camera\fest\fest\IMG_20241117_105039.jpg" width="169" height="172" alt="I'm developer from New York"
+            <img src="./IMG_20241117_105039.jpg" width="169" height="172" alt="I'm developer from New York"
               class="rotate-img">
 
           </div>
@@ -157,7 +157,7 @@
 
           <figure class="about-banner">
 
-            <img src="F:\my phone\camera\fest\fest\IMG_20241117_105039.jpg" width="800" height="652" loading="lazy" alt="Ethan's Photo"
+            <img src="./IMG_20241117_105039.jpg" width="800" height="652" loading="lazy" alt="Ethan's Photo"
               class="img-cover">
 
             <img src="./assets/images/absolute-image.jpg" width="800" height="717" loading="lazy" alt="Ethan's Photo"
